<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">PianOli</string>
    <string name="app_url" translatable="false">https://github.com/nicolasbrailo/PianOli</string>
    <string name="quit_app">Quit app</string>
    <string name="settings">Settings</string>

    <!-- splash text at top of settings screen -->
    <string name="some_info_about_this_app_title">PianOli is open-source!</string>
    <string name="some_info_about_this_app">Send suggestions, feature requests and bug reports to the <a href="https://github.com/nicolasbrailo/PianOli">project website</a>.</string>

    <!-- Explains to the adult user how to bypass our baby-protection and enter the settings screen -->
    <string name="config_tooltip">Hold the first gear icon, then press the second for options.</string>

    <!-- Sound set selection and instrument names -->
    <string name="soundset">Sound set</string>
    <string name="soundset_guitar">Guitar</string>
    <string name="soundset_musicbox">Music Box</string>
    <string name="soundset_piano">Piano</string>
    <string name="soundset_piano2">Piano 2</string>
    <string name="soundset_sine">Sine Wave</string>
    <string name="soundset_vibraphone">Vibraphone</string>


    <!-- Song player settings -->
    <string name="preferences">Preferences</string>
    <string name="pref_enable_melodies">Auto play melodies</string>
    <string name="pref_enable_melodies_summary">Touching a key plays the next note in a melody, rather than the key\'s
        actual note.
    </string>
    <string name="pref_selected_melodies">Available melodies</string>
    <string name="pref_selected_melodies_summary">List of melodies to cycle through</string>
    <string name="pref_app_lock_enabled">Lock piano screen</string>
    <string name="pref_app_lock_enabled_summary">When enabled, the piano screen will be locked (using app pinning) so that children cannot easily exit from it.</string>

    <!-- Song catalog; translatable since quite a few tunes are known under different names,
            and with different lyrics, around the world -->
    <string name="melody_twinkle_twinkle_little_star">Twinkle, Twinkle, Little Star</string>
    <string name="melody_im_a_little_teapot">I\'m a Little Teapot</string>
    <string name="melody_insy_winsy_spider">Incy Winsy Spider</string>
    <string name="melody_waltzing_matilda">Waltzing Matilda</string>
    <string name="melody_brother_john">Brother John</string>

    <!-- keyboard colour themes -->
    <string name="theme">Key Colours</string>
    <string name="theme_black_and_white">Black and white</string>
    <string name="theme_boomwhacker" translatable="false">Boomwhacker</string>
    <string name="theme_pastel">Pastel</string>
    <string name="theme_rainbow">Rainbow</string>

</resources>
