<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.nicobrailo.pianoli.AboutPreference />

    <PreferenceCategory app:title="@string/preferences" app:iconSpaceReserved="false">
        <ListPreference
            app:defaultValue="piano"
            app:key="selectedSoundSet"
            app:title="@string/soundset"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <ListPreference
            app:defaultValue="boomwhacker"
            app:key="theme"
            app:title="@string/theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_entryValues"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="enableMelodies"
            app:title="@string/pref_enable_melodies"
            app:summary="@string/pref_enable_melodies_summary"
            app:iconSpaceReserved="false" />
        <MultiSelectListPreference
            app:defaultValue="@array/default_selected_melodies"
            app:iconSpaceReserved="false"
            app:key="selectedMelodies"
            app:title="@string/pref_selected_melodies"
            app:summary="@string/pref_selected_melodies_summary"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
