<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:keepScreenOn="true"
    android:orientation="horizontal"
    tools:context=".ConfigActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:title="@string/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_centre"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_centre"
        android:background="?android:attr/listDivider"
        />

    <TextView
        android:id="@+id/lbl_about_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="@id/guideline_centre"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:text="@string/some_info_about_this_app_title" />

    <TextView
        android:id="@+id/lbl_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_about_title"
        app:layout_constraintStart_toStartOf="@id/guideline_centre"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onClick_About"
        android:padding="10dp"
        android:text="@string/some_info_about_this_app" />

    <TextView
        android:id="@+id/lbl_choose_sound_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_centre"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:padding="10dp"
        android:text="@string/sound_set" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_choose_sound_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_centre"
        android:background="?android:attr/listDivider" />

    <ListView
        android:id="@+id/sound_set_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_centre"
        tools:listitem="@android:layout/simple_list_item_1"
        android:choiceMode="singleChoice" />

</androidx.constraintlayout.widget.ConstraintLayout>
